# wrestling-alice-ros-2

./: .gitignore  README.md
controllers/: Build_Dockerfile  Dockerfile  build_controller.sh
controllers/participant/: package.xml  participant.json  participant.py  setup.cfg  setup.py
controllers/participant/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
controllers/participant/install/participant/share/participant/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
controllers/participant/install/participant/share/participant/launch/: robot_launch.py
controllers/participant/launch/: robot_launch.py
controllers/participant/participant/: nao_controller.py
controllers/participant/resource/: webots_controller.urdf
protos/: Nao.proto
worlds/: .wrestling.wbproj  wrestling.wbt
