<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>participant</name>
  <version>1.0.0</version>
  <description>Minimalist ROS 2 controller example for the Humanoid Robot Wrestling Competition.</description>
  <maintainer email="support@cyberbotics.com">Cyberbotics</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">http://wiki.ros.org/webots_ros2</url>
  <url type="bugtracker">https://github.com/cyberbotics/webots_ros2/issues</url>
  <url type="repository">https://github.com/cyberbotics/webots_ros2</url>

  <depend>rclpy</depend>
  <depend>webots_ros2_driver</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
